--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <canvas
     id="canvas"
     style="
-      width: 100vw;
-      height: 100vh;
+      /* width: 100vw; */
+      /* height: 100vh; */
       background-color: aqua;
       transform: scaleY(-1);
       border: 3px solid green ;
