--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
       align-items: center;
       height: 100vh;
       background-color: rgb(27, 0, 0);
-      
     }
   </style>
+  <link rel="stylesheet" href="styles/crt.css" media="all" />
 </head>
-<body>
+<body id="screen">
+  <div class="scanline"></div>
+  <div class="scanline1"></div>
   <canvas
+    class="FRAME"
     id="canvas"
     style="
-      /* width: 100vw; */
-      /* height: 100vh; */
       background-color: aqua;
       transform: scaleY(-1);
-      border: 3px solid green ;
+      border: 3px solid green;
     "
   >
   </canvas>
